Поддержка JAVA 8. Проблема с FMLLauncher всё ещё актуальна.